examples/test/testpolicy8546.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8546
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key37: value18
      key40: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value36
      podSelector:
        matchLabels:
          key21: value37
          key23: value28
          key30: value21
